# cmake_strict_defaults

./: CMakeLists.txt  action.yml
.github/workflows/: build-and-test.yml
test/: CMakeLists.txt  main.cpp
